--- a/screen/pro27/.project
+++ b/screen/pro27/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>pro27</name>
+	<name>webERP</name>
 	<comment></comment>
 	<projects>
 	</projects>
