--- a/screen/webERP/src/main/webapp/WEB-INF/config/jdbc/jdbc.properties
+++ b/screen/webERP/src/main/webapp/WEB-INF/config/jdbc/jdbc.properties
@@ -1,6 +1,6 @@
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
 jdbc.url=jdbc:oracle:thin:@localhost:1521:orcl
-jdbc.username=scott
-jdbc.password=tiger
+jdbc.username=erp_admin
+jdbc.password=erp_admin
 
 
